argocd/CiliumNetworkPolicy-allow-world-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-world-egress
  namespace: argocd
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'
    - toFQDNs:
        - matchName: github.com
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
    - toFQDNs:
        - matchName: github.com
        - matchName: raw.githubusercontent.com
        - matchName: helm.cilium.io
        - matchPattern: '*.github.io'
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
